[package]
name = "rapido"
version = "0.2.0"
authors = ["David Bryson <daveb@miceda.org>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["tendermint", "blockchain", "abci"]
description = "A Rust framework for building Tendermint applications"

[dependencies]
abci = { git = "https://github.com/tendermint/rust-abci", branch = "master" }
anyhow = "1.0.34"
base64 = "0.13.0"
borsh = "0.7.1"
bs58 = "0.4.0"
exonum-crypto = "1.0.0"
exonum-merkledb = "1.0.0"
hex = "0.4.0"
protobuf = "= 2.16.2"

# Client support
tendermint = "0.17.0-rc3"
tendermint-rpc = { version = "0.17.0-rc3", features = ["http-client"]}
tokio = "0.2"
structopt = "0.3.21"

[dev-dependencies]
rand = "0.6.5"

[[bin]]
name = "counterapp"
path = "src/bin/counter.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"


