[package]
name = "rapido-core"
version = "0.3.0"
authors = ["Dave Bryson <daveb@miceda.org>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["tendermint", "blockchain", "abci"]
description = "A Rust framework for building Tendermint applications"
repository = "https://github.com/davebryson/rapido/tree/master/core"

[dependencies]
abci = {git = "https://github.com/tendermint/rust-abci", branch="develop"}
anyhow = "1.0.34"
base64 = "0.13.0"
borsh = "0.7.1"
bs58 = "0.4.0"
dirs = "3.0.1"
env_logger = "0.8.2"
exonum-crypto = "1.0.0"
exonum-merkledb = "1.0.0"
hex = "0.4.0"
log = "0.4.8"
protobuf = "= 2.16.2"
