[package]
name = "rapido"
version = "0.1.0"
authors = ["David Bryson <daveb@miceda.org>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["tendermint", "blockchain", "abci"]
description = "A Rust framework for building Tendermint applications"

[dependencies]
abci = "0.6.2"
base64 = "0.10.1"
borsh = "0.2.5"
exonum-merkledb = "0.12.0"
exonum-crypto = "0.12.0"
failure = "0.1.5"

[dev-dependencies]
rand = "0.6.5"
