[package]
name = "cryptocurrency"
version = "0.1.0"
authors = ["Dave Bryson <daveb@miceda.org>"]
edition = "2018"

[dependencies]
abci = "0.6.2"
base64 = "0.10.1"
borsh = "0.2.5"
json = "0.12.0"
exonum-crypto = "0.12.0"
exonum-merkledb = "0.12.0"
failure = "0.1.5"
rapido = {path = "../../rapido"}
rapido-client = {path = "../../rapido-client"}
structopt = "0.3.3"

[[example]]
name = "cryptocurrency"
path = "src/main.rs"